client/src/index.scss
/* ... */
#message {
  border: 1px solid var(--basic-text);
  border-radius: 5px;
  height: 100%;
  margin-top: 2rem;
  max-height: 250px;
  max-width: 500px;
  outline: none;
  padding: 0.5rem;
  resize: none;
  transition: box-shadow 0.4s;
  width: 90%
}

#message::placeholder {
  color: var(--basic-text);
}

.message-date {
  color: var(--primary-light);
  font-size: 1em;
  margin: 0.5rem 0;
}

.send-msg-btn {
  background: none;
  border: none;
  padding: 0;
}

.send-message-icon {
  outline: none;
  transition: all 0.4s;
  width: 5rem;
}

.send-message-icon:focus,
.send-message-icon:hover {
  cursor: pointer;
  transform: scale(1.25);
}

/* --------------------- */

/* * Reuseable Classes * */

/* --------------------- */

.small-icon {
  height: 1.5rem;
  width: 1.5rem;
}

.button {
  transition: all 0.4s;
}

.list {
  list-style-type: none;
}

.my-section {
  background-color: #fff;
  padding: 4rem 2rem;
}

.section-heading {
  border-bottom: 2px solid var(--primary-light);
  font-size: 3.6em;
  font-weight: 700;
  margin-bottom: 1rem;
}

.section-text {
  font-size: 2em;
}

.cta-btn,
.cancel-btn {
  border: 2px solid transparent;
  border-radius: 5px;
  font-size: 16px;
  font-weight: 700;
  outline: none;
  padding: 8px 16px;
  text-decoration: none;
  text-transform: uppercase;
  transition: background-color, box-shadow, color 0.4s;
}

.cta-btn {
  background-color: var(--primary-color);
  color: white;
}

.cta-btn:focus,
.cta-btn:hover {
  background-color: var(--primary-dark);
  box-shadow: 0 0 3px 3px var(--primary-light);
}

.cta-btn:disabled {
  background-color: #eee;
  border-color: var(--basic-text);
  color: var(--basic-text);
}

.cancel-btn {
  border: 1px solid var(--primary-color);
  background-color: white;
  color: var(--primary-color);
}

.cancel-btn:focus,
.cancel-btn:hover {
  background-color: var(--primary-dark);
  box-shadow: 0 0 3px 3px var(--primary-light);
  color: white;
}

.small-btn {
  font-size: 12px;
  padding: 4px 8px;
}

.username-btn {
  background-color: transparent;
  border: none;
  border-bottom: 2px solid transparent;
  font-size: 1.6em;
  margin-left: 1rem;
  transition: all 0.4s;
}

.username-btn:focus,
.username-btn:hover {
  border-color: var(--primary-color);
  color: var(--primary-color);
  cursor: pointer;
}

.my-input {
  border: 1px solid var(--primary-color);
  border-radius: 5px;
  font-size: 1.6em;
  outline: none;
  padding: 1rem;
  transition: box-shadow 0.4s;
}

.my-input:focus,
.my-input:hover,
.search-input:focus,
.search-input:hover {
  box-shadow: 0 0 3px 3px var(--primary-dark);
}

/* Change SVG color */

/* Found at this CodePen: https://codepen.io/sosuke/pen/Pjoqqp */
.filter-primary {
  filter: invert(11%) sepia(98%) saturate(7005%) hue-rotate(3deg) brightness(89%) contrast(113%);
}

.screen-reader-text {
  left: -99999px;
  position: absolute;
  top: -99999px;
}

/* Flex Classes */

.flex {
  display: flex;
}

.flex--column {
  flex-direction: column;
}

.flex--justify-around {
  justify-content: space-around;
}

.flex--justify-between {
  justify-content: space-between;
}

.flex--justify-center {
  justify-content: center;
}

.flex--justify-end {
  justify-content: flex-end;
}

.flex--justify-evenly {
  justify-content: space-evenly;
}

.flex--justify-start {
  justify-content: flex-start;
}

.flex--align-center {
  align-items: center;
}

.flex--align-end {
  align-items: flex-end;
}

.flex--wrap {
  flex-wrap: wrap;
}

